--- a/parts/main-cover.html
+++ b/parts/main-cover.html
@@ -11,7 +11,7 @@
     <!-- wp:group {"style":{"spacing":{"padding":{"bottom":"var:preset|spacing|30"}}},"layout":{"type":"default"}} -->
     <div class="wp-block-group" style="padding-bottom:var(--wp--preset--spacing--30)"><!-- wp:post-title {"level":1,"style":{"typography":{"fontStyle":"normal","fontWeight":"600"}},"fontSize":"large"} /-->
     
-    <!-- wp:post-excerpt {"style":{"typography":{"fontStyle":"normal","fontWeight":"400","fontSize":"24px"}},"fontFamily":"lexend"} /--></div>
+    <!-- wp:post-excerpt {"style":{"typography":{"fontStyle":"normal","fontWeight":"400","fontSize":"24px"}},"fontFamily":"secondary-font"} /--></div>
     <!-- /wp:group -->
     
     <!-- wp:post-terms {"term":"category","style":{"layout":{"selfStretch":"fit","flexSize":null},"border":{"radius":"12px"}}} /-->
